[gd_scene load_steps=20 format=3 uid="uid://bhy88sgscldp6"]

[ext_resource type="Texture2D" uid="uid://b87keuf8e6mjw" path="res://Assets/taustalevel3.png" id="2_jcnlr"]
[ext_resource type="Script" uid="uid://dp425u0ion2nj" path="res://scripts/character_body_2d.gd" id="3_5kfcu"]
[ext_resource type="Texture2D" uid="uid://ddrw2l75gip2l" path="res://Assets/plumpyframe1rightSCALED.png" id="4_i558w"]
[ext_resource type="Texture2D" uid="uid://cnpneore7wnv1" path="res://Assets/plumpyframe2rightSCALED.png" id="5_cuxq2"]
[ext_resource type="Texture2D" uid="uid://cx622vqs0qhof" path="res://Assets/plumpyframe3rightSCALED.png" id="6_wvr33"]
[ext_resource type="Texture2D" uid="uid://cupicab4uu2s1" path="res://Assets/plumpyframe4rightSCALED.png" id="7_sgm4o"]
[ext_resource type="Texture2D" uid="uid://bg2vhmrq4oxxn" path="res://Assets/plumpyframe5rightSCALED.png" id="8_6r3eb"]
[ext_resource type="Texture2D" uid="uid://dchno3x0nqh26" path="res://Assets/plumpyframe6rightSCALED.png" id="9_2pufk"]
[ext_resource type="PackedScene" uid="uid://cuo7n10agdbbv" path="res://candy_corn.tscn" id="10_btc8u"]
[ext_resource type="Script" uid="uid://ccrpgghj3agk2" path="res://scripts/item_spawner.gd" id="11_ikghu"]
[ext_resource type="PackedScene" uid="uid://cmw15uso1cd2a" path="res://Scenes/candy_corn.tscn" id="12_i6smf"]
[ext_resource type="PackedScene" uid="uid://c5aief4f176bi" path="res://Scenes/lepakkokarkki.tscn" id="13_d4rhq"]
[ext_resource type="PackedScene" uid="uid://bc4vdvlnp3hok" path="res://silmäkarkki.tscn" id="14_ldfcd"]
[ext_resource type="PackedScene" uid="uid://b51rqcsq10gpv" path="res://bug.tscn" id="15_41lt0"]
[ext_resource type="Script" uid="uid://cidbnbild1tih" path="res://PääScene/hp_baarit.gd" id="16_t8cg7"]
[ext_resource type="Texture2D" uid="uid://dagyw3w681ml3" path="res://Assets/sydan.png" id="17_o5ykh"]
[ext_resource type="Script" uid="uid://t4qq4g7nkcdi" path="res://PääScene/main.gd2.gd" id="18_5kfcu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_grg3l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_i558w")
}, {
"duration": 1.0,
"texture": ExtResource("5_cuxq2")
}, {
"duration": 1.0,
"texture": ExtResource("6_wvr33")
}, {
"duration": 1.0,
"texture": ExtResource("7_sgm4o")
}, {
"duration": 1.0,
"texture": ExtResource("8_6r3eb")
}, {
"duration": 1.0,
"texture": ExtResource("9_2pufk")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bmxlf"]
radius = 138.0
height = 304.0

[node name="Level 2" type="Node2D"]
script = ExtResource("18_5kfcu")
score_board = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 543)
texture = ExtResource("2_jcnlr")

[node name="Player" type="CharacterBody2D" parent="." groups=["Pelaaja"]]
script = ExtResource("3_5kfcu")
nopeus = 1000.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(314, 950)
scale = Vector2(0.622, 0.603)
sprite_frames = SubResource("SpriteFrames_grg3l")
animation = &"run"
frame_progress = 0.173194

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(290, 956)
shape = SubResource("CapsuleShape2D_bmxlf")

[node name="Candy corn" parent="." instance=ExtResource("10_btc8u")]

[node name="Timer" type="Timer" parent="."]

[node name="item spawner" type="Node2D" parent="."]
script = ExtResource("11_ikghu")
item_scenes = Array[PackedScene]([ExtResource("12_i6smf"), ExtResource("13_d4rhq"), ExtResource("14_ldfcd"), ExtResource("15_41lt0")])
spawn_interval = 1.285

[node name="HPBaarit" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 60.0
offset_bottom = 44.0
script = ExtResource("16_t8cg7")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="HPBaarit"]
layout_mode = 0
offset_left = 1415.0
offset_top = 91.5
offset_right = 1987.0
offset_bottom = 258.5
scale = Vector2(0.5, 0.5)

[node name="Kurpitsa1" type="TextureRect" parent="HPBaarit/HBoxContainer"]
layout_mode = 2
texture = ExtResource("17_o5ykh")

[node name="Kurpitsa2" type="TextureRect" parent="HPBaarit/HBoxContainer"]
layout_mode = 2
texture = ExtResource("17_o5ykh")
stretch_mode = 2

[node name="Kurpitsa3" type="TextureRect" parent="HPBaarit/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("17_o5ykh")

[node name="ScoreLabeli" type="Label" parent="HPBaarit"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
